@@ -1,3 +1,8 @@
+1999-12-17  Dave Brolley  <brolley@cygnus.com>
+
+	* sim-profile.h: (set_profile_option_mask): Add prototype.
+	* sim-profile.c (set_profile_option_mask): No longer static.
+
 Wed Dec  8 21:47:13 1999  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* sim-arange.c: Include <string.h>
